main section of webpage

--- a/index.html
+++ b/index.html
@@ -46,6 +46,121 @@
 
     <!-- Main part start -->
     <main>
+        <section class="container">
+            <div class="players">
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-1.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Neymar Jr</h3>
+                        <p class="player-detail">Neymar, in full Neymar da Silva Santos, Jr., (born February 5, 1992, Mogi das Cruzes, Brazil), Brazilian football (soccer) </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-2.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Lionel Messi</h3>
+                        <p class="player-detail">Leo Messi's footballing career started in 1995 at Newell's Old Boys, where he played until the year 2000. .</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-3.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Cristiano Ronaldo</h3>
+                        <p class="player-detail">Cristiano Ronaldo, aged 36, is undoubtedly one of the greatest football players of our generation. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-4.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Paulo Dybala</h3>
+                        <p class="player-detail">Paulo Bruno Exequiel Dybala was born on November 15, 1993, in Laguna Larga, Cordoba, Argentina. He was raised by his parents</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-5.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Mesut Ozil</h3>
+                        <p class="player-detail">Mesut Özil was born on October 15, 1988, in Gelsenkirchen, Germany to Mustafa Özil (father) and Gulizar Özil (mother).</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-6.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Mauro Icardi</h3>
+                        <p class="player-detail">Mauro was born to a family of emigrant who migrated from Argentina to Spain. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-7.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Di Maria</h3>
+                        <p class="player-detail">Di María was born on 14 February 1988 in Rosario, Argentina, as one of three children of Miguel and Diana, and grew up in Perdriel.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-8.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Kylian Mbappé</h3>
+                        <p class="player-detail">Mbappé was born in Paris and was raised in Bondy, Seine-Saint-Denis, a commune 10.9 km (6.8 mi) from the centre of Paris.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-9.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Mohamed Salah</h3>
+                        <p class="player-detail">Mohamed Salah is an Egyptian footballer who plays as a forward for the Egyptian national team as well as the Premier League club 'Liverpool. ' .</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-10.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Harry Kane</h3>
+                        <p class="player-detail">Harry Kane was brought up in an Irish way of living. Both parents are from Galway, a harbour city on Ireland's west coast. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-11.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Kevin De Bruyne</h3>
+                        <p class="player-detail">Kevin started playing football in Drongen, Belgium at an early age of 4 in his town, Gent where he lived with his parents. He had a good start to the game.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="thumbnail">
+                        <img src="images/players/player-12.png" alt="player1">
+                    </div>
+                    <div class="player-info">
+                        <h3 class="player-name">Philippe Coutinho</h3>
+                        <p class="player-detail">Philippe Coutinho Correia was born on the 12th of June, 1992 in Rio de Janeiro, Brazil to Ze Carlos Coutinho (father) and Dona Esmeralda Coutinho (mother).</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        
 
     </main>
     <!-- Main part End -->
