--- a/index.html
+++ b/index.html
@@ -16,18 +16,6 @@
 
     <!-- Header start -->
     <header>
-        <div class="navbar container ">
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Club</a></li>
-                    <li><a href="#">World Cup 2020</a></li>
-                    <li><a href="#">Upcoming Matches</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-
         <div class="banner container">
             <div class="banner-info">
                 <h1>Conmebol <br>Copa America <br> 2021 </h1>
@@ -39,6 +27,9 @@
             <div class="banner-img">
                 <img src="images/banner.png" alt="banner image">
             </div>
+        </div>
+        <div class="animation">
+            <img src="images/football.png" alt="">
         </div>
 
     </header>
@@ -167,6 +158,19 @@
 
     <!-- Footer start -->
     <footer>
+
+        <div class="logo">
+            <img src="images/Logo.png" alt="log">
+        </div>
+        <div class="icon">
+            <a href="https://www.youtube.com/channel/UClDog-gMe4GC3lOhpX4P_Nw"><img src="images/Social Icons/Youtube.png" alt=""></a>
+            <a href="#"><img src="images/Social Icons/Dribbble.png" alt=""></a>
+            <a href="#"><img src="images/Social Icons/Instagram.png" alt=""></a>
+            <a href="#"><img src="images/Social Icons/Twitter.png" alt=""></a>
+        </div>
+        <p class="copyright">Copyright &copy; 2022 Football</p>
+
+        
 
     </footer>
     <!-- Footer end -->
